Fix mobile text wrapping for github activity entries

--- a/civictechprojects/static/css/partials/_ProjectCommitCard.scss
+++ b/civictechprojects/static/css/partials/_ProjectCommitCard.scss
@@ -7,6 +7,7 @@
 
 .ProjectCommitCard-line {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 1rem;
 
   &:first-child {
